5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1168/executions/1573_994.log
== TEST (2019-03-11 14:11:36) 
-- CODE:
print(sdfasdfas")
-- ERROR:
File "XXXX", line 1
    print(sdfasdfas")
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:11:50) 
-- CODE:
print(sdfasdfas")
-- ERROR:
File "XXXX", line 1
    print(sdfasdfas")
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:12:03) 
-- CODE:
print(sdfasdfas")
-- ERROR:
File "XXXX", line 1
    print(sdfasdfas")
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:12:13) 
-- CODE:
print(sdfasdfas")
		
	
-- ERROR:
File "XXXX", line 1
    print(sdfasdfas")
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:12:27) 
-- CODE:
print("sdfasdfas")
		
	
-- OUTPUT:
sdfasdfas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:12:49) 
-- CODE:
print("Universidade Federal do Amazonas")
		
	
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:12:52) 
-- CODE:
print("Universidade Federal do Amazonas")
		
	
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:13:00) 
-- CODE:
print("Universidade Federal do Amazonas")
		
	
-- EXECUTION TIME:
0.165276
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
